complete edit profile page

--- a/app/src/Pages/EditProfile.css
+++ b/app/src/Pages/EditProfile.css
@@ -2,3 +2,12 @@ label {
   float: left;
   font-weight: bold;
 }
+.upload-button {
+  margin-top: 5px;
+}
+.profile-photo {
+  width: 400px;
+  height: 400px;
+  object-fit: cover;
+  margin-bottom: 20px;
+}
