update profile page and add review summary

--- a/app/src/Pages/EditProfile.css
+++ b/app/src/Pages/EditProfile.css
@@ -11,3 +11,8 @@ label {
   object-fit: cover;
   margin-bottom: 20px;
 }
+.required-field::after {
+  content: "*";
+  color: red;
+  margin-left:2px
+}
