--- a/app/src/Components/Messaging/MessageChat.css
+++ b/app/src/Components/Messaging/MessageChat.css
@@ -2,13 +2,14 @@
 
 .member-list {
   width: 20%;
+  overflow-y: auto;
 }
 
 .chat-content {
-  width:80%;
+  width:100%;
   height: 30em;
-  margin-left: 10px;
-  overflow-y: scroll;
+  /* margin-left: 10px; */
+  overflow-y: auto;
   display: flex;
   flex-direction: column-reverse;
 }
