--- a/app/src/Components/Messaging/InputBar.css
+++ b/app/src/Components/Messaging/InputBar.css
@@ -5,10 +5,16 @@
 }
 .input-message {
   width: 83%;
+  border-radius: 5px;
 }
 
 .input-button {
   border-radius: 5px;
   background-color: #FBE8A6;
+}
 
+.input-button:hover {
+  background: grey;
+  color:#fff;
+  cursor: pointer;
 }
