--- a/app/src/Components/Messaging/css/Contact.css
+++ b/app/src/Components/Messaging/css/Contact.css
@@ -3,17 +3,25 @@
   border-radius: 50%;
 }
 
+.left {
+  margin-right:auto;
+}
+
 .member {
   display: flex;
   align-items: center;
+  justify-content: flex-end;
   gap: 15px;
   border-radius: 0px;
   color: #303C6C;
-  margin: 5px;
 }
 
 .member:hover{
   background: #FBE8A6;
   color:#fff;
   cursor: pointer;
+}
+
+.right {
+  margin: 20px;
 }
