Added timestamps and sorting by time. Need to fix timezone and move timestamp addition from backend to frontend to remove initial invalid date on message send

--- a/app/src/Components/Messaging/css/MessageChat.css
+++ b/app/src/Components/Messaging/css/MessageChat.css
@@ -19,9 +19,17 @@
   border-radius: 5px;
   background-color: antiquewhite;
 }
+
 .message-data{
   padding:5px;
   font-family: 'Nunito', sans-serif;
+}
+
+.message-time{
+  padding:5px;
+  font-family: 'Nunito', sans-serif;
+  color: slategray;
+  font-size: 12px;
 }
 
 .message.self {
