--- a/app/src/Components/Messaging/css/MessageChat.css
+++ b/app/src/Components/Messaging/css/MessageChat.css
@@ -17,17 +17,18 @@
 
 .message {
   padding:5px;
+  width: auto;
   display: flex;
   flex-direction: row;
   box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
   margin: 5px 10px;
   border-radius: 5px;
   background-color: antiquewhite;
-  min-width: 20px;
+  /* min-width: 20px;
   max-width: 70%;
   min-height: 50px;
   align-self: flex-start;
-  padding: 5px 10px;
+  padding: 5px 10px; */
 }
 
 .message-data{
@@ -38,12 +39,12 @@
 .message.self {
   justify-content: end;
   background-color: aliceblue;
-  align-self: flex-end;
+  /* align-self: flex-end;
   text-align: right;
   min-width: 20px;
   max-width: 70%;
   min-height: 50px;
-  padding: 5px 10px;
+  padding: 5px 10px; */
 }
 
 .avatar{
