--- a/app/src/Components/Messaging/css/MessageChat.css
+++ b/app/src/Components/Messaging/css/MessageChat.css
@@ -23,7 +23,7 @@
   box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
   margin: 5px 10px;
   border-radius: 5px;
-  background-color: antiquewhite;
+  background-color: rgba(244, 151, 108, .3);
   min-width: 20px;
   max-width: 70%;
   min-height: 50px;
