comments out css on span (PetProfile/photos.css) and fixes get requests after proxy was deleted from package json

--- a/app/src/Components/PetProfile/Photos.css
+++ b/app/src/Components/PetProfile/Photos.css
@@ -57,10 +57,11 @@
   cursor: pointer;
 }
 
-span {
+/* pls avoid css of general tags */
+/* span {
   font-size: 2rem;
   color: #777;
-}
+} */
 
 .dropzone {
   text-align: center;
