--- a/app/src/Components/Search/AdvSearch.css
+++ b/app/src/Components/Search/AdvSearch.css
@@ -56,6 +56,8 @@
   grid-row-start: 5 / span 1;
   margin: 10px;
   gap: 10px;
+  background-color: #F4976C;
+  border-color: #F4976C
 }
 
 /* .optionContainer li:hover,
