--- a/app/src/Components/PetProfile/Photos.css
+++ b/app/src/Components/PetProfile/Photos.css
@@ -106,6 +106,7 @@ span {
 .preview-container {
   display: flex;
   flex-direction: row;
+  margin-top: 12px;
   align-items: flex-end;
   flex-wrap: wrap;
   gap: 15px 15px;
@@ -114,7 +115,6 @@ span {
 .thumb-information {
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 
 .thumb {
@@ -131,12 +131,19 @@ span {
   box-sizing: border-box;
 }
 
+.thumb:active{
+  border: 2px solid;
+  border-color: rgb(40, 87, 196);
+}
+
 .thumb-inner {
   display: flex;
   position: relative;
   min-width: 0;
   overflow: hidden;
 }
+
+
 
 .thumb-photo {
   display: block;
@@ -150,12 +157,12 @@ span {
   right: 0;
   color:rgb(40, 87, 196);
   font-size: 14px;
-  text-align: start;
+  /* text-align: start; */
 }
 
 .remove-button {
   font-size: 8px !important;
-
+  padding: 3.2px !important;
 }
 
 .thumb-remove-button:hover {
@@ -163,13 +170,17 @@ span {
   cursor: pointer;
 }
 
-.thumb-radio-button {
+.thumb-caption {
   display: flex;
-  justify-items: flex-start;
-  align-items: center;
+  flex-direction: row;
+  justify-content: space-around;
   margin-top: 7px;
   margin-bottom: 7px;
+}
+
+.thumb-radio-button {
   font-size: 12px;
+  align-self: flex-end;
 }
 
 .thumb-radio-button input:hover {
