Added default instructions for contact page

--- a/app/src/Components/Messaging/css/ContactsList.css
+++ b/app/src/Components/Messaging/css/ContactsList.css
@@ -7,6 +7,7 @@
 .contact-list {
   width: 60%;
   max-height: 25em;
+  min-width: 200px;
   overflow-y: auto;
   border: 1px solid;
   border-radius: 5px;
