--- a/app/src/Components/PetProfile/Photos.css
+++ b/app/src/Components/PetProfile/Photos.css
@@ -107,6 +107,7 @@ span {
   display: flex;
   flex-direction: row;
   margin-top: 12px;
+  margin-bottom: 12px;
   align-items: flex-end;
   flex-wrap: wrap;
   gap: 15px 15px;
@@ -142,8 +143,6 @@ span {
   min-width: 0;
   overflow: hidden;
 }
-
-
 
 .thumb-photo {
   display: block;
