--- a/app/src/Components/PetProfile/PhotoPreviews.css
+++ b/app/src/Components/PetProfile/PhotoPreviews.css
@@ -15,7 +15,7 @@
   flex-direction: column;
   border-radius: 2px;
   border: 1px solid #eaeaea;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   width: 80px;
   height: 80px;
   padding: 4px;
@@ -48,17 +48,13 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  align-items: center;
   margin-bottom: 10px;
 }
 
 .thumb-remove-button {
   font-size: 8px !important;
   padding: 3.2px !important;
-}
-
-.thumb-radio-button {
-  font-size: 12px;
-  align-self: flex-end;
 }
 
 .thumb-radio-button input:hover {
