--- a/app/src/Pages/Profile.css
+++ b/app/src/Pages/Profile.css
@@ -28,5 +28,5 @@ sup {
   background-repeat: no-repeat;
   height: 150px;
   background-position: center;
-  background-color: #FAFAFA;
+  background-color: #F8F9FA;
 }
