--- a/app/src/Components/UserProfile/userProfile.css
+++ b/app/src/Components/UserProfile/userProfile.css
@@ -80,3 +80,36 @@
     color: black;
     font-size: 20px;
   }
+
+  .pagination > li > a
+  {
+      background-color: rgb(255, 255, 255);
+      color: #000000;
+  }
+  
+  .pagination > li > a:focus,
+  .pagination > li > a:hover,
+  .pagination > li > span:focus,
+  .pagination > li > span:hover
+  {
+      color: #5a5a5a;
+      background-color: rgb(255, 255, 255);
+      border-color: rgb(0, 0, 0);
+  }
+  
+  .pagination > .active > a
+  {
+      color: white;
+      background-color: #8F9ED9 !Important;
+      border: solid 1px #8F9ED9 !Important;
+  }
+  
+  
+  .pagination > .active > a:hover
+  {
+      background-color: #bdc5e5 !Important;
+      border: solid 1px #000000;
+  }
+
+
+
