--- a/app/src/Components/Search/Search.css
+++ b/app/src/Components/Search/Search.css
@@ -1,35 +1,56 @@
 
+
 .searchGroup{
+  text-align: left;
   display: grid;
-  grid-template-columns: 1fr 3fr 3fr 2fr 1fr;
-  gap: 5px;
-  grid-template-areas:
-    "left search zip btn right"
-    "left   dd    dd  dd  dd";
+  grid-template-columns: 1fr 4fr 2fr 1fr 3fr;
+  gap: 10px;
+  grid-template-areas: ". bar1 bar2 sbtn ."
+                      ".  dd    .    .  .";
+  margin-bottom:100px;
+  padding-right: 100px;
 }
 
 #searchInput {
-  grid-area: search;
+  grid-area: bar1;
+  height: 40px;
+  vertical-align: bottom;
 }
 
 #zipcodeInput{
-  grid-area: zip;
+  grid-area: bar2;
+  height: 40px;
+  vertical-align: bottom;
 }
 
 #searchButton {
-  grid-area: btn;
+  grid-area: sbtn;
+  height: 40px;
+  vertical-align: bottom;
+  background-color: #8F9ED9;
+  color: white;
 }
 
+#searchButton:hover {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
 .searchDropdownContainer {
   grid-area: dd;
-  text-align: left;
-  margin-bottom: 300px;
-  margin-left: 2em;
-  position: relative;
-  z-index: 500;
+  background-color: rgba(250, 235, 215, 0.8);
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  z-index: 1;
+
 }
 
 .boldText {
   font-weight: bold;
 }
 
+.searchOption{
+  height: 30px;
+  vertical-align: bottom;
+}
+
+#searchForm {
+  /* margin-left: 100px; */
+}
