--- a/app/src/Components/Search/AdvSearch.css
+++ b/app/src/Components/Search/AdvSearch.css
@@ -1,6 +1,6 @@
 .advSearchContainer{
   display: grid;
-  grid-template-rows: 10% 10% 10% 10% 10% 7%;
+  grid-template-rows: 10% 10% 10% 10% 7% 7%;
   grid-template-columns: 1fr;
   gap: 10px;
   margin: 10px;
@@ -56,18 +56,19 @@
   grid-row-start: 5 / span 1;
   margin: 10px;
   gap: 10px;
-  background-color: #F4976C;
-  border-color: #F4976C
+  background-color: #8F9ED9;
+  border-color: #8F9ED9
 }
 
 #clearFilterButton{
   grid-row-start: 6 / span 1;
   margin: 10px;
   gap: 10px;
-  background-color: #F4976C;
-  border-color: #F4976C;
-  width: 50%;
-  align-self: center;
+  background-color: #8F9ED9;
+  border-color: #8F9ED9;
+  /* width: 50%; */
+  /* align-self: center; */
+  justify-content: center;
 }
 
 /* .optionContainer li:hover,
