--- a/app/src/Components/Search/Search.css
+++ b/app/src/Components/Search/Search.css
@@ -3,10 +3,10 @@
 .searchGroup{
   text-align: left;
   display: grid;
-  grid-template-columns: 1fr 4fr 2fr 1fr 3fr;
+  grid-template-columns: 1fr 4fr 4fr 1fr 1fr;
   gap: 10px;
   grid-template-areas: ". bar1 bar2 sbtn ."
-                      ".  dd    .    .  .";
+                      ".  dd    dd    dd  .";
   /* margin-bottom:100px; */
   padding-right: 100px;
 }
@@ -39,6 +39,7 @@
   background-color: rgba(250, 235, 215, 0.8);
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
   z-index: 1;
+  padding-left: 1em;
 
 }
 
