--- a/app/src/Pages/Profile.css
+++ b/app/src/Pages/Profile.css
@@ -30,3 +30,13 @@ sup {
   background-position: center;
   background-color: #FAFAFA;
 }
+.footer {
+  position: relative;
+  margin-top: 150px;
+  margin-bottom: 0;
+  padding-bottom: 0;
+  /* negative value of footer height */
+  height: 210px;
+  clear: both;
+  background-color: #8F9ED9;
+}
