--- a/app/src/Components/PetProfile/AddAPetForm.css
+++ b/app/src/Components/PetProfile/AddAPetForm.css
@@ -26,8 +26,8 @@
 }
 
 .form-fields-3-row {
-    width: 80px;
-    align-self: center;
+    width: 120px;
+    align-self: start;
 }
 
 .form-fields {
@@ -44,8 +44,9 @@
 .buttons-form-container {
     display: flex;
     flex-direction: row;
-    width: 500px;
+    align-self: center;
     justify-content: space-around;
+    width: 400px;
 }
 
 
