changes front page into bootstrap grid

--- a/app/src/Components/Search/QuickSearch.css
+++ b/app/src/Components/Search/QuickSearch.css
@@ -1,6 +1,6 @@
 .quickSearchBtns{
-  top: 600px;
-  position: fixed;
+  /* top: 560px;
+  position: fixed; */
   z-index: -1;
   text-align: center;
 }
