--- a/app/src/Components/Default/DefaultComponents.css
+++ b/app/src/Components/Default/DefaultComponents.css
@@ -1,3 +1,8 @@
 .navBar{
-  background-color: #3036C6;
+}
+.flex-wrapper {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+  justify-content: flex-start;
 }
