--- a/app/src/Components/Default/Footer.css
+++ b/app/src/Components/Default/Footer.css
@@ -1,17 +1,18 @@
-
 .footer {
-  /* position: relative; */
-  margin-top: 150px;
-  margin-bottom: 0;
-  padding-bottom: 0;
-  /* negative value of footer height */
-  height: 210px;
-  clear: both;
   background-color: #8F9ED9;
-  padding-top: 20px;
-
+  width: 100%;
+  color: white;
+  padding-top: 10px;
+  margin-top: 100px;
 }
-
 .footerImg{
   height: 30px;
+}
+#psb-image{
+  width: 150px;
+  margin-bottom: 10px;
+}
+#pd-image{
+  width: 100px;
+  margin-bottom: 10px;
 }
