--- a/app/src/Pages/Home.css
+++ b/app/src/Pages/Home.css
@@ -1,3 +1,10 @@
 .homeStyle {
   margin: 0;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+#row-footer {
+  width: 100%;
 }
