--- a/app/src/Components/Search/Search.css
+++ b/app/src/Components/Search/Search.css
@@ -40,6 +40,8 @@
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
   z-index: 1;
   padding-left: 1em;
+  height:150px;
+  overflow: hidden;
 
 }
 
@@ -54,4 +56,8 @@
 
 #searchForm {
   max-height: fit-content;
+}
+
+.placeholderRow{
+  height: 190px;
 }
