--- a/app/src/Components/PetProfile/AddAPetForm.css
+++ b/app/src/Components/PetProfile/AddAPetForm.css
@@ -21,12 +21,12 @@
 }
 
 .form-fields-2-row {
-    width: 230px;
+    width: 240px;
     /* align-self: center; */
 }
 
 .form-fields-3-row {
-    width: 140px;
+    width: 150px;
     align-self: start;
 }
 
@@ -64,6 +64,45 @@
     font-size: 10px !important;
 }
 
-form-input {
-    font-size: 8px !important;
+.form-input {
+    font-size: 14px !important;
+}
+
+.add-pet-button {
+    background: #F4976C;
+    color: white;
+    padding: 8px 16px;
+    width: 120px;
+    border-radius: 5px;
+    border: none;
+}
+
+.add-pet-button:hover {
+    background: #ec8555;
+}
+
+.cancel-pet-button {
+    background: #6c757d;
+    color: white;
+    padding: 8px 16px;
+    width: 120px;
+    border-radius: 5px;
+    border: none;
+}
+
+.cancel-pet-button:hover {
+    background: #565e64
+}
+
+.vaccination-pet-button {
+    background: #6c757d;
+    color: white;
+    padding: 8px 16px;
+    width: 120px;
+    border-radius: 5px;
+    border: none;
+}
+
+.vaccination-pet-button:hover {
+    background: #565e64
 }
