--- a/app/src/Components/Search/AdvSearch.css
+++ b/app/src/Components/Search/AdvSearch.css
@@ -57,7 +57,21 @@
   margin: 10px;
   gap: 10px;
   background-color: #8F9ED9;
-  border-color: #8F9ED9
+  color: white;
+  border: 1px solid #8F9ED9;
+  border-radius: 20px;
+  height: 50px;
+}
+
+#applyFilterButton:hover{
+  background-color: #8F9ED9;
+  color: white;
+  font-weight: bolder;
+}
+
+#applyFilterButton:active{
+  box-shadow: 0 5px rgb(104, 102, 102);
+  transform: translateY(4px);
 }
 
 #clearFilterButton{
@@ -70,6 +84,7 @@
   /* align-self: center; */
   justify-content: center;
 }
+
 
 /* .optionContainer li:hover,
 .optionContainer .highlight {
