--- a/app/src/Components/Search/Search.css
+++ b/app/src/Components/Search/Search.css
@@ -25,15 +25,24 @@
 
 #searchButton {
   grid-area: sbtn;
-  height: 40px;
   vertical-align: bottom;
   background-color: #8F9ED9;
   color: white;
+  border: 1px solid #8F9ED9;
+  border-radius: 20px;
+  height: 40px;
 }
 
 #searchButton:hover {
-  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  /* box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19); */
+  font-weight: bolder;
 }
+
+#searchButton:active{
+  box-shadow: 0 5px rgb(104, 102, 102);
+  transform: translateY(4px);
+}
+
 .searchDropdownContainer {
   grid-area: dd;
   background-color: rgba(250, 235, 215, 0.8);
