--- a/app/src/Components/Default/Navbar.css
+++ b/app/src/Components/Default/Navbar.css
@@ -1,6 +1,6 @@
-#customNav {
-  padding-left: 6em;
+#nav-bar {
   background-color: #8F9ED9;
   margin-bottom: 2em;
+  margin-top: 1em;
   width: 100%;
 }
