--- a/app/src/Pages/EditProfile.css
+++ b/app/src/Pages/EditProfile.css
@@ -17,5 +17,10 @@ label {
   margin-left:2px
 }
 #edit-button {
-  background-color: black;
+  background-color: #8F9ED9;
+  border-color: #8F9ED9;
+}
+#edit-button:hover {
+  background-color: #F4976C;
+  border-color: #F4976C;
 }
