--- a/app/src/Pages/Profile.css
+++ b/app/src/Pages/Profile.css
@@ -22,3 +22,11 @@ sup {
 .profilePage {
   background-color: #FAFAFA;
 }
+#profile-button {
+  background-color: #8F9ED9;
+  border-color: #8F9ED9;
+}
+#profile-button:hover {
+  background-color: #F4976C;
+  border-color: #F4976C;
+}
