pet profile page changes

--- a/app/src/Components/PetProfile/Pet.css
+++ b/app/src/Components/PetProfile/Pet.css
@@ -1,3 +1,8 @@
 .react_lightgallery_item {
     display: inline-block;
 }
+
+.contact-card-tab {
+    display: flex;
+    justify-content: center;
+}
