--- a/app/src/Components/Messaging/css/InputBar.css
+++ b/app/src/Components/Messaging/css/InputBar.css
@@ -15,8 +15,8 @@
 
 .input-button {
   border-radius: 5px;
-  background-color: #303C6C;
-  color: white;
+  background-color: white;
+  color: #8F9ED9;
 }
 
 .input-button:hover {
