--- a/app/src/Components/Messaging/css/MessagingApp.css
+++ b/app/src/Components/Messaging/css/MessagingApp.css
@@ -1,5 +1,5 @@
 .chatBox {
-  border: 3px solid rgba(48, 60, 108, .7);
+  border: 3px solid #8F9ED9;
   border-radius: 5px;
   background-color: rgb(254, 249, 242);
 }
