--- a/app/src/Components/Messaging/css/ContactsList.css
+++ b/app/src/Components/Messaging/css/ContactsList.css
@@ -1,7 +1,7 @@
 .list-title {
   font-weight: bold;
   color: white;
-  background-color: #303C6C;
+  background-color: rgb(143, 158, 217);
   height: 30px;
 }
 .contact-list {
