--- a/app/src/Pages/Profile.css
+++ b/app/src/Pages/Profile.css
@@ -1,3 +1,5 @@
+
+
 #user-name {
   text-align:left;
   margin-top: 10px;
@@ -39,4 +41,19 @@ sup {
   height: 210px;
   clear: both;
   background-color: #8F9ED9;
+}
+
+.page-size{
+  position: relative;
+  left: 40px;
+  text-align-last:center;
+  width: 50px;
+  
+}
+
+.i-per-page{
+  position: relative;
+  left: 90px;
+  top: 10px;
+  text-align-last:center;
 }
