--- a/app/src/Components/UserProfile/ReviewSummary.css
+++ b/app/src/Components/UserProfile/ReviewSummary.css
@@ -3,8 +3,7 @@
   border-color: #8F9ED9;
 }
 #write-review-button:hover {
-  background-color: #F4976C;
-  border-color: #F4976C;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 #star-filter {
   color: black;
@@ -12,9 +11,6 @@
 #star-filter:hover {
   color: #F4976C;
 }
-/* #progress {
-  font-size: medium;
-  height: 50px;
-  color: red
-} */
-.progress {height: 100px;}
+#progress-bar {
+  margin-top: 8px;
+}
