--- a/app/src/Components/Default/Footer.css
+++ b/app/src/Components/Default/Footer.css
@@ -20,6 +20,15 @@
   width: 100px;
   margin-bottom: 10px;
 }
+#pp-image{
+  width: 100px;
+  margin-bottom: 10px;
+  background-color: white;
+}
+#pmf-image{
+  width: 120px;
+  margin-bottom: 10px;
+}
 #ascent {
   padding-top: 1em;
 }
