--- a/app/src/Pages/EditProfile.css
+++ b/app/src/Pages/EditProfile.css
@@ -21,6 +21,5 @@ label {
   border-color: #8F9ED9;
 }
 #edit-button:hover {
-  background-color: #F4976C;
-  border-color: #F4976C;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
