--- a/app/src/Components/Search/PetCard.css
+++ b/app/src/Components/Search/PetCard.css
@@ -1,4 +1,12 @@
-#petCardPhotoRow{
-  background-color: red;
-  border:red;
+.petCardCustom{
+  height:300px;
 }
+
+.imgRow{
+  height: 200px;
+}
+
+.petName {
+  /* background-color: blueviolet; */
+}
+
