--- a/app/src/Components/UserProfile/userProfile.css
+++ b/app/src/Components/UserProfile/userProfile.css
@@ -66,7 +66,7 @@
     left: 106px;
     top: 19px;
     font-size: 30px;
-    color: white;
+    /* color: white; */
   }
   .i-changepw {
     position: relative;
