--- a/app/src/Pages/Profile.css
+++ b/app/src/Pages/Profile.css
@@ -29,7 +29,6 @@ sup {
 #profile-button:hover {
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
-
 .page-size{
   position: relative;
   left: 40px;
@@ -37,10 +36,15 @@ sup {
   width: 50px;
 
 }
-
 .i-per-page{
   position: relative;
   left: 90px;
   top: 10px;
   text-align-last:center;
+}
+.flex-wrapper-favList {
+  display: flex;
+  min-height: 60vh;
+  flex-direction: column;
+  justify-content: flex-start;
 }
