--- a/app/src/Components/Default/Footer.css
+++ b/app/src/Components/Default/Footer.css
@@ -12,27 +12,12 @@
 .footerImg{
   height: 30px;
 }
-#psb-image{
+#psb-image, #pd-image, #pp-image, #pmf-image{
   /* width: 150px; */
   height: 100px;
   margin-bottom: 10px;
 }
-#pd-image{
-  /* width: 100px; */
-  height: 100px;
-  margin-bottom: 10px;
-}
-#pp-image{
-  /* width: 100px; */
-  height: 100px;
-  margin-bottom: 10px;
-  /* background-color: white; */
-}
-#pmf-image{
-  /* width: 180px; */
-  height: 100px;
-  margin-bottom: 10px;
-}
+
 #ascent {
   padding-top: 1em;
 }
@@ -43,4 +28,13 @@
 
 .firstCol{
   border-right: white solid 1px;
+}
+
+.teamMembers {
+  text-align: left;
+  font-size: 0.8em;;
+}
+
+.teamCol{
+  text-align: left;
 }
