--- a/app/src/Components/PetProfile/Pet.css
+++ b/app/src/Components/PetProfile/Pet.css
@@ -6,3 +6,34 @@
     display: flex;
     justify-content: center;
 }
+
+.profile-page-photo-preview {
+    display: block;
+    width: auto;
+    height: 100%;
+}
+
+.profile-page-photo-container {
+    display: flex;
+    flex-direction: row;
+    gap: 15px 15px;
+}
+
+.profile-page-container {
+    display: flex;
+}
+
+.profile-page-left-container {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 50%;
+
+}
+
+.profile-page-right-container {
+    display: flex;
+    flex-direction: column;
+
+    flex-basis: 50%;
+
+}
