--- a/app/src/Components/PetProfile/Pet.css
+++ b/app/src/Components/PetProfile/Pet.css
@@ -71,6 +71,7 @@
     flex-direction: column;
     position: relative;
     margin-top: 30px;
+    margin-bottom: 40px;
     width: 200px;
     aspect-ratio: 1;
     object-fit: cover;
@@ -80,12 +81,11 @@
     border-color: #8F9ED9;
     border-radius: 50%;
     overflow: hidden;
-
 }
 
 .profile-page-cover-photo {
     position: absolute;
-    max-width: 300px;
+    max-width: 250px;
 }
 
 .profile-page-likes-container {
@@ -169,7 +169,9 @@
     width: 80px;
     height: 80px;
     overflow: hidden;
-    background-color: #8F9ED9;
+    /* border: solid 1px;
+    border-color: #4562d3; */
+    /* background-color: #8F9ED9; */
 }
 
 .profile-page-photo {
