--- a/app/src/Components/PetProfile/Pet.css
+++ b/app/src/Components/PetProfile/Pet.css
@@ -26,7 +26,7 @@
     flex-direction: column;
     background-color: rgb(143, 158, 217,0.3);
     border-radius: 20px;
-    justify-content: space-between;
+    justify-content: flex-start;
     padding: 20px 20px;
     align-items: center;
     flex-grow: 1.5;
@@ -162,6 +162,7 @@
     background-color: rgb(143, 158, 217,0.6);
     border-radius: 10px;
     padding: 20px 10px;
+    margin-top: 40px;
     gap: 10px;
 }
 
