--- a/app/src/Components/Messaging/css/MessagingApp.css
+++ b/app/src/Components/Messaging/css/MessagingApp.css
@@ -2,6 +2,7 @@
   border: 3px solid #8F9ED9;
   border-radius: 5px;
   background-color: rgb(254, 249, 242);
+  border-width: thin;
 }
 
 .messagingApp {
