--- a/app/src/Components/Default/Slides.css
+++ b/app/src/Components/Default/Slides.css
@@ -1,12 +1,6 @@
-#petcarousel{
-  height: 400px;
-  margin-bottom: 20px;
-}
+
 
 .petSlide {
-  width: 100%;
-}
-#carousel-inner-slides{
-  width:100%;
-  max-height: 400px !important;
+  height: 400px;
+  padding-bottom: 30px;
 }
