changed favorite heart icon

--- a/app/src/Components/UserProfile/userProfile.css
+++ b/app/src/Components/UserProfile/userProfile.css
@@ -64,8 +64,10 @@
   .i-heart {
     position: relative;
     left: 106px;
-    top: 50px;
-    font-size: 30px;
+    top: 60px;
+    font-size: 40px;
+    color: white;
+    
     /* color: white; */
   }
   .i-changepw {
